# VulkanTemplate

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AndroidLogging.h  AssetUtils.cpp  AssetUtils.h  BaseNativeApp.cpp  BaseNativeApp.h  CapabilityUtil.cpp  CapabilityUtil.h  CapabilityUtils.cpp  CapabilityUtils.h  CollectionUtils.h  MathUtils.h  StringUtils.cpp  StringUtils.h  TimeUtils.cpp  TimeUtils.h  VulkanNativeApp.cpp  VulkanNativeApp.h  main.cpp  native-lib.cpp
app/src/main/cpp/vulkan_wrapper/: README.md
app/src/main/res/values/: strings.xml
app/src/main/shaders/: shader_base.vert
gradle/wrapper/: gradle-wrapper.properties
